--- a/Skills-and-Knowledge.css
+++ b/Skills-and-Knowledge.css
@@ -35,8 +35,16 @@
 
 @media (max-width: 575px){ .u-section-1 .u-sheet-1 {min-height: 1570px}
 .u-section-1 .u-image-1 {height: 235px; width: auto; margin-right: initial; margin-left: initial}
-.u-section-1 .u-group-1 {min-height: 402px; width: 296px; margin-top: -58px}
+.u-section-1 .u-group-1 {min-height: 1304px; width: 296px; margin-top: -58px}
 .u-section-1 .u-container-layout-1 {padding-left: 20px; padding-right: 20px}
 .u-section-1 .u-text-1 {font-size: 2rem}
-.u-section-1 .u-text-8 {margin-left: 84px}
+.u-section-1 .u-text-2 {font-size: 1.125rem; font-weight: 700}
+.u-section-1 .u-text-4 {font-size: 1.125rem; font-weight: 700; width: auto; margin-right: -13px; margin-left: 0}
+.u-section-1 .u-text-6 {font-size: 1.125rem; width: auto; font-weight: 700; margin-top: 19px; margin-left: 0}
+.u-section-1 .u-text-7 {margin-top: 11px}
+.u-section-1 .u-text-8 {font-size: 1.125rem; width: auto; font-weight: 700; margin-right: -32px; margin-left: 0}
+.u-section-1 .u-text-10 {font-size: 1.125rem; width: auto; font-weight: 700; margin-top: 12px; margin-left: 10px}
+.u-section-1 .u-text-11 {margin-top: 17px}
+.u-section-1 .u-text-12 {font-size: 1.125rem; width: auto; font-weight: 700; margin-top: 17px; margin-left: 10px}
+.u-section-1 .u-text-13 {margin-top: 13px}
 .u-section-1 .u-btn-1 {margin-right: 0} }
