--- a/About-Me.css
+++ b/About-Me.css
@@ -86,6 +86,8 @@
 .u-section-2 .u-container-layout-10 {padding: 30px}
 .u-section-2 .u-text-5 {font-size: 1.125rem; margin: 14px auto 0 0} 
 
+@media (max-width: 1199px){ .u-section-2 .u-layout-wrap-2 {width: 722px} }
+
 @media (max-width: 991px){ .u-section-2 .u-sheet-1 {min-height: 418px}
 .u-section-2 .u-layout-wrap-1 {width: 720px; margin-left: 0}
 .u-section-2 .u-layout-cell-1 {min-height: 100px}
@@ -116,4 +118,14 @@
 
 @media (max-width: 575px){ .u-section-2 .u-sheet-1 {min-height: 781px}
 .u-section-2 .u-layout-wrap-1 {width: 340px}
-.u-section-2 .u-layout-wrap-2 {width: 340px} }
+.u-section-2 .u-layout-cell-1 {min-height: 136px}
+.u-section-2 .u-icon-1 {margin-top: 14px; margin-left: auto}
+.u-section-2 .u-layout-cell-3 {min-height: 124px}
+.u-section-2 .u-icon-2 {margin-left: auto}
+.u-section-2 .u-layout-cell-5 {min-height: 124px}
+.u-section-2 .u-icon-3 {margin-left: auto}
+.u-section-2 .u-layout-wrap-2 {width: 340px; margin-top: 20px}
+.u-section-2 .u-layout-cell-7 {min-height: 126px}
+.u-section-2 .u-icon-4 {margin-top: 6px; margin-left: auto}
+.u-section-2 .u-layout-cell-9 {min-height: 124px}
+.u-section-2 .u-icon-5 {margin-top: 4px; margin-left: auto; margin-bottom: -4px} }
