--- a/About-Me.css
+++ b/About-Me.css
@@ -1,109 +1,109 @@
 .u-section-1 {background-image: none}
-.u-section-1 .u-sheet-1 {min-height: 676px}
-.u-section-1 .u-layout-wrap-1 {margin-top: 60px; margin-bottom: 60px}
-.u-section-1 .u-layout-cell-1 {min-height: 676px}
+.u-section-1 .u-sheet-1 {min-height: 1322px}
+.u-section-1 .u-layout-wrap-1 {margin: 60px auto 20px 0}
+.u-section-1 .u-layout-cell-1 {min-height: 902px}
 .u-section-1 .u-container-layout-1 {padding: 30px}
 .u-section-1 .u-text-1 {margin-top: 0; margin-bottom: 0; font-weight: 700; font-size: 2.25rem}
 .u-section-1 .u-text-2 {margin-left: 0; line-height: 1.6; margin-bottom: 0; margin-top: 20px; animation-duration: 1000ms; font-weight: 600; font-size: 1.125rem}
-.u-section-1 .u-layout-cell-2 {min-height: 338px}
+.u-section-1 .u-layout-cell-2 {min-height: 340px}
 .u-section-1 .u-container-layout-2 {padding: 10px}
 .u-section-1 .u-text-3 {font-weight: 700; font-size: 1.5rem; margin: 0 auto 0 20px}
-.u-section-1 .u-text-4 {line-height: 2; font-size: 1.25rem; margin: 11px auto 0 0}
-.u-section-1 .u-text-5 {line-height: 2; font-size: 1.125rem; margin: 0 auto 0 35px}
-.u-section-1 .u-text-6 {line-height: 2; font-size: 1.25rem; margin: 20px auto 0 0}
-.u-section-1 .u-text-7 {line-height: 2; font-size: 1.125rem; margin: 0 129px 0 35px}
-.u-section-1 .u-layout-cell-3 {min-height: 1102px; animation-duration: 1000ms}
+.u-section-1 .u-text-4 {line-height: 2; font-size: 1.25rem; font-weight: 600; margin: 11px auto 0 0}
+.u-section-1 .u-text-5 {line-height: 2; font-size: 1.125rem; font-weight: 600; margin: 0 auto 0 35px}
+.u-section-1 .u-text-6 {line-height: 2; font-size: 1.25rem; font-weight: 600; margin: 20px auto 0 0}
+.u-section-1 .u-text-7 {line-height: 2; font-size: 1.125rem; font-weight: 600; margin: 0 129px 0 35px}
+.u-section-1 .u-layout-cell-3 {min-height: 1242px; animation-duration: 1000ms}
 .u-section-1 .u-container-layout-3 {padding: 30px}
-.u-section-1 .u-shape-1 {width: 400px; height: 400px; background-image: linear-gradient(#b9c1cc, #478ac9); margin: 92px 20px 0 auto}
-.u-section-1 .u-image-1 {width: 400px; height: 400px; box-shadow: 5px 5px 26px 0 rgba(0,0,0,0.2); margin: -442px auto 0 41px} 
+.u-section-1 .u-image-1 {width: 400px; background-image: url("images/photo_batik.png"); min-height: 400px; height: auto; margin: 63px 26px 0 auto}
+.u-section-1 .u-container-layout-4 {padding: 30px} 
 
 @media (max-width: 1199px){ .u-section-1 .u-sheet-1 {min-height: 578px}
-.u-section-1 .u-layout-cell-1 {min-height: 557px}
+.u-section-1 .u-layout-wrap-1 {margin-right: initial; margin-left: initial}
+.u-section-1 .u-layout-cell-1 {min-height: 744px}
 .u-section-1 .u-layout-cell-2 {min-height: 152px}
 .u-section-1 .u-text-3 {margin-top: -36px; margin-left: 0}
 .u-section-1 .u-text-4 {margin-top: 10px}
 .u-section-1 .u-text-5 {margin-left: 29px}
 .u-section-1 .u-text-7 {margin-right: 64px; margin-left: 0}
-.u-section-1 .u-layout-cell-3 {min-height: 909px}
-.u-section-1 .u-shape-1 {width: 340px; height: 340px; margin-top: 113px; margin-right: 10px; margin-left: 65px}
-.u-section-1 .u-image-1 {width: 340px; height: 340px; margin-top: -399px; margin-left: 5px} }
+.u-section-1 .u-layout-cell-3 {min-height: 1024px}
+.u-section-1 .u-image-1 {width: 340px; margin-top: 113px; margin-right: 10px; margin-left: 65px; min-height: 379px} }
 
 @media (max-width: 991px){ .u-section-1 .u-sheet-1 {min-height: 1155px}
 .u-section-1 .u-layout-cell-1 {min-height: 100px}
 .u-section-1 .u-layout-cell-2 {min-height: 100px}
 .u-section-1 .u-text-5 {margin-left: 45px}
 .u-section-1 .u-layout-cell-3 {min-height: 100px}
-.u-section-1 .u-shape-1 {margin-top: 126px; margin-left: 190px}
-.u-section-1 .u-image-1 {margin-left: 130px} }
+.u-section-1 .u-image-1 {margin-top: 126px; margin-left: 190px} }
 
 @media (max-width: 767px){ .u-section-1 .u-sheet-1 {min-height: 1281px}
-.u-section-1 .u-layout-wrap-1 {margin-bottom: -23px}
+.u-section-1 .u-layout-wrap-1 {margin-bottom: -23px; margin-right: initial; margin-left: initial}
 .u-section-1 .u-container-layout-1 {padding-left: 10px; padding-right: 10px}
 .u-section-1 .u-text-5 {margin-left: 33px}
 .u-section-1 .u-text-7 {margin-right: 0}
 .u-section-1 .u-layout-cell-3 {min-height: 487px}
 .u-section-1 .u-container-layout-3 {padding-left: 10px; padding-right: 10px}
-.u-section-1 .u-shape-1 {margin-top: 119px; margin-left: 115px}
-.u-section-1 .u-image-1 {margin-left: 65px} }
+.u-section-1 .u-image-1 {margin-top: 119px; margin-left: 115px}
+.u-section-1 .u-container-layout-4 {padding-left: 10px; padding-right: 10px} }
 
 @media (max-width: 575px){ .u-section-1 .u-sheet-1 {min-height: 1286px}
-.u-section-1 .u-layout-wrap-1 {margin-bottom: 60px}
+.u-section-1 .u-layout-wrap-1 {margin-bottom: 20px; margin-right: initial; margin-left: initial}
 .u-section-1 .u-text-5 {margin-left: 20px}
 .u-section-1 .u-layout-cell-3 {min-height: 388px}
-.u-section-1 .u-shape-1 {width: 300px; height: 300px; margin-top: 28px; margin-right: 0; margin-left: auto}
-.u-section-1 .u-image-1 {width: 274px; height: 274px; margin-top: -328px; margin-left: 0} }.u-section-2 {background-image: none}
-.u-section-2 .u-sheet-1 {min-height: 748px}
-.u-section-2 .u-layout-wrap-1 {width: 876px; margin: 0 auto 0 20px}
+.u-section-1 .u-image-1 {width: 300px; margin-top: 28px; margin-right: 0; margin-left: auto; min-height: 320px} }.u-section-2 {background-image: none}
+.u-section-2 .u-sheet-1 {min-height: 50vw}
+.u-section-2 .u-layout-wrap-1 {width: 876px; margin: 9px 310px 0 auto}
 .u-section-2 .u-layout-cell-1 {min-height: 175px; animation-duration: 1000ms}
 .u-section-2 .u-container-layout-1 {padding: 30px 30px 22px}
 .u-section-2 .u-icon-1 {height: 64px; width: 64px; background-image: none; margin: 20px auto 0 60px}
 .u-section-2 .u-layout-cell-2 {min-height: 175px}
 .u-section-2 .u-container-layout-2 {padding: 30px}
-.u-section-2 .u-text-1 {font-size: 1.125rem; margin: 0 auto 0 0}
+.u-section-2 .u-text-1 {font-size: 1.125rem; font-weight: 600; margin: 0 auto 0 0}
 .u-section-2 .u-layout-cell-3 {min-height: 133px}
 .u-section-2 .u-container-layout-3 {padding: 30px}
 .u-section-2 .u-icon-2 {height: 64px; width: 64px; background-image: none; animation-duration: 1000ms; margin: 0 auto 0 60px}
 .u-section-2 .u-layout-cell-4 {min-height: 133px}
 .u-section-2 .u-container-layout-4 {padding: 30px}
-.u-section-2 .u-text-2 {font-size: 1.125rem; margin: 14px auto 0 0}
+.u-section-2 .u-text-2 {font-size: 1.125rem; font-weight: 600; margin: 14px auto 0 0}
 .u-section-2 .u-layout-cell-5 {min-height: 138px}
 .u-section-2 .u-container-layout-5 {padding: 30px}
 .u-section-2 .u-icon-3 {height: 64px; width: 64px; background-image: none; animation-duration: 1000ms; margin: 0 auto 0 60px}
 .u-section-2 .u-layout-cell-6 {min-height: 138px}
 .u-section-2 .u-container-layout-6 {padding: 30px}
-.u-section-2 .u-text-3 {font-size: 1.125rem; margin: 0}
-.u-section-2 .u-layout-wrap-2 {width: 876px; margin: 0 auto 0 20px}
+.u-section-2 .u-text-3 {font-size: 1.125rem; font-weight: 600; margin: 0}
+.u-section-2 .u-layout-wrap-2 {width: 876px; margin: -4px auto 0 0}
 .u-section-2 .u-layout-cell-7 {min-height: 146px}
 .u-section-2 .u-container-layout-7 {padding: 30px 30px 22px}
 .u-section-2 .u-icon-4 {height: 64px; width: 64px; background-image: none; animation-duration: 1000ms; margin: 10px auto 0 60px}
 .u-section-2 .u-layout-cell-8 {min-height: 146px}
 .u-section-2 .u-container-layout-8 {padding: 30px}
-.u-section-2 .u-text-4 {font-size: 1.125rem; margin: 0 auto 0 0}
+.u-section-2 .u-text-4 {font-size: 1.125rem; font-weight: 600; margin: 0 auto 0 0}
 .u-section-2 .u-layout-cell-9 {min-height: 156px}
 .u-section-2 .u-container-layout-9 {padding: 30px}
 .u-section-2 .u-icon-5 {height: 64px; width: 64px; background-image: none; animation-duration: 1000ms; margin: 0 auto 0 60px}
 .u-section-2 .u-layout-cell-10 {min-height: 156px}
 .u-section-2 .u-container-layout-10 {padding: 30px}
-.u-section-2 .u-text-5 {font-size: 1.125rem; margin: 14px auto 0 0} 
+.u-section-2 .u-text-5 {font-size: 1.125rem; font-weight: 600; margin: 14px auto 0 0}
+.u-section-2 .u-image-1 {width: 400px; height: 400px; box-shadow: 5px 5px 26px 0 rgba(0,0,0,0.2); margin: -568px -156px 60px auto} 
 
-@media (max-width: 1199px){ .u-section-2 .u-layout-wrap-2 {width: 722px} }
+@media (max-width: 1199px){ .u-section-2 .u-layout-wrap-1 {margin-right: 64px}
+.u-section-2 .u-layout-wrap-2 {width: 722px} }
 
 @media (max-width: 991px){ .u-section-2 .u-sheet-1 {min-height: 418px}
-.u-section-2 .u-layout-wrap-1 {width: 720px; margin-left: 0}
+.u-section-2 .u-layout-wrap-1 {width: 720px; margin-right: 0}
 .u-section-2 .u-layout-cell-1 {min-height: 100px}
 .u-section-2 .u-layout-cell-2 {min-height: 100px}
 .u-section-2 .u-layout-cell-3 {min-height: 100px}
 .u-section-2 .u-layout-cell-4 {min-height: 100px}
 .u-section-2 .u-layout-cell-5 {min-height: 100px}
 .u-section-2 .u-layout-cell-6 {min-height: 100px}
-.u-section-2 .u-layout-wrap-2 {width: 720px; margin-left: 0}
+.u-section-2 .u-layout-wrap-2 {width: 720px}
 .u-section-2 .u-layout-cell-7 {min-height: 100px}
 .u-section-2 .u-layout-cell-8 {min-height: 100px}
 .u-section-2 .u-layout-cell-9 {min-height: 100px}
 .u-section-2 .u-layout-cell-10 {min-height: 100px} }
 
 @media (max-width: 767px){ .u-section-2 .u-sheet-1 {min-height: 882px}
-.u-section-2 .u-layout-wrap-1 {width: 540px; margin-right: 0}
+.u-section-2 .u-layout-wrap-1 {width: 540px}
 .u-section-2 .u-container-layout-1 {padding-left: 10px; padding-right: 10px}
 .u-section-2 .u-container-layout-2 {padding-left: 10px; padding-right: 10px}
 .u-section-2 .u-container-layout-3 {padding-left: 10px; padding-right: 10px}
