--- a/Certification.css
+++ b/Certification.css
@@ -280,14 +280,13 @@
 .u-section-5 .u-text-1 {font-weight: 700; font-size: 2.25rem; margin: 20px -54px 0 0}
 .u-section-5 .u-table-1 {margin: 9px auto 60px 0}
 .u-block-f8b5-4 {font-weight: 700; text-transform: uppercase; letter-spacing: 1px}
-.u-block-f8b5-72 {font-weight: 700; background-image: none}
 .u-block-f8b5-59 {font-weight: 700; background-image: none}
 .u-block-f8b5-60 {font-weight: 700; background-image: none}
 .u-block-f8b5-61 {font-weight: 700; background-image: none}
+.u-section-5 .u-table-body-1 {font-weight: 600}
 .u-section-5 .u-table-cell-1 {background-image: none; text-transform: uppercase; font-weight: 700}
-.u-section-5 .u-table-cell-2 {background-image: none; text-transform: uppercase; font-weight: 700}
-.u-section-5 .u-table-cell-3 {background-image: none; font-weight: 700; text-transform: uppercase}
-.u-section-5 .u-table-cell-4 {background-image: none; text-transform: uppercase; font-weight: 700}
+.u-section-5 .u-table-cell-2 {background-image: none; font-weight: 700; text-transform: uppercase}
+.u-section-5 .u-table-cell-3 {background-image: none; text-transform: uppercase; font-weight: 700}
 .u-block-f8b5-35 {background-image: none} 
 
 @media (max-width: 1199px){ .u-section-5 .u-text-1 {margin-right: 0}
