--- a/About-Me.css
+++ b/About-Me.css
@@ -14,7 +14,7 @@
 .u-section-1 .u-text-7 {line-height: 2; font-size: 1.125rem; font-weight: 600; margin: 0 129px 0 35px}
 .u-section-1 .u-layout-cell-3 {min-height: 1242px; animation-duration: 1000ms}
 .u-section-1 .u-container-layout-3 {padding: 30px}
-.u-section-1 .u-image-1 {width: 400px; background-image: url("images/photo_batik.png"); min-height: 400px; height: auto; margin: 63px 26px 0 auto}
+.u-section-1 .u-image-1 {width: 400px; background-image: url("images/photo_batik.png"); min-height: 400px; margin: 63px 26px 0 auto}
 .u-section-1 .u-container-layout-4 {padding: 30px} 
 
 @media (max-width: 1199px){ .u-section-1 .u-sheet-1 {min-height: 578px}
