--- a/nicepage.css
+++ b/nicepage.css
@@ -30226,15 +30226,13 @@ a.u-link.u-text-hover-grey-90:hover {
 .u-header .u-search-1 {width: 123px; margin-right: 0; margin-left: auto} }
  .u-footer {background-image: none}
 .u-footer .u-sheet-1 {min-height: 42px}
-.u-footer .u-text-1 {margin: 10px 288px 10px 362px} 
+.u-footer .u-text-1 {width: 559px; margin: 10px auto} 
 @media (max-width: 1199px){ .u-footer .u-sheet-1 {min-height: 99px}
-.u-footer .u-text-1 {width: 417px; margin-left: 262px; margin-right: 188px} }
-@media (max-width: 991px){ .u-footer .u-sheet-1 {min-height: 76px}
-.u-footer .u-text-1 {margin-left: 152px; margin-right: 78px} }
-@media (max-width: 767px){ .u-footer .u-sheet-1 {min-height: 57px}
-.u-footer .u-text-1 {margin-left: 50px; margin-right: 0} }
+.u-footer .u-text-1 {width: 417px} }
+@media (max-width: 991px){ .u-footer .u-sheet-1 {min-height: 76px} }
+@media (max-width: 767px){ .u-footer .u-sheet-1 {min-height: 57px} }
 @media (max-width: 575px){ .u-footer .u-sheet-1 {min-height: 36px}
-.u-footer .u-text-1 {width: 340px; margin-left: 0} }
+.u-footer .u-text-1 {width: 340px} }
 
  /*begin-variables base-font-size*/ 
  html { font-size: 16px; }
