--- a/Profile-Information.css
+++ b/Profile-Information.css
@@ -1,6 +1,6 @@
 .u-section-1 {background-image: url("images/default-image.jpg")}
 .u-section-1 .u-sheet-1 {min-height: 700px}
-.u-section-1 .u-tabs-1 {min-height: 620px; width: 1234px; margin: 60px auto 20px -37px}
+.u-section-1 .u-tabs-1 {min-height: 620px; width: 1234px; margin: 60px auto 60px -37px}
 .u-section-1 .u-tab-link-1 {font-size: 0.75rem; background-image: none; letter-spacing: 2px; text-transform: uppercase; font-weight: 700; padding: 10px 25px}
 .u-section-1 .u-tab-link-2 {font-size: 0.75rem; background-image: none; letter-spacing: 2px; text-transform: uppercase; font-weight: 700; padding: 10px 25px}
 .u-section-1 .u-tab-link-3 {font-size: 0.75rem; background-image: none; letter-spacing: 2px; text-transform: uppercase; font-weight: 700; padding: 10px 25px}
@@ -9,7 +9,7 @@
 .u-section-1 .u-tab-pane-1 {background-image: none; height: 390px}
 .u-section-1 .u-container-layout-1 {padding: 30px}
 .u-section-1 .u-image-1 {width: 309px; height: 327px; margin: 0 auto 0 0}
-.u-section-1 .u-text-1 {line-height: 2.2; margin: -251px 0 0 352px}
+.u-section-1 .u-text-1 {line-height: 2.2; font-size: 1rem; margin: -251px 0 0 352px}
 .u-section-1 .u-btn-1 {padding: 0}
 .u-section-1 .u-btn-2 {padding: 0}
 .u-section-1 .u-text-2 {margin: -250px auto 0 352px}
@@ -36,7 +36,7 @@
 @media (max-width: 1199px){ .u-section-1 {background-position: 50% 50%}
 .u-section-1 .u-sheet-1 {min-height: 559px}
 .u-section-1 .u-tabs-1 {height: auto; width: 940px; margin-left: 0}
-.u-section-1 .u-text-1 {width: auto; margin-left: 338px; font-size: 1rem}
+.u-section-1 .u-text-1 {width: auto; margin-left: 338px}
 .u-section-1 .u-text-2 {margin-left: 252px}
 .u-section-1 .u-table-1 {width: 880px} }
 
@@ -59,7 +59,7 @@
 .u-section-1 .u-container-layout-5 {padding-left: 10px; padding-right: 10px} }
 
 @media (max-width: 575px){ .u-section-1 .u-sheet-1 {min-height: 100vh}
-.u-section-1 .u-tabs-1 {min-height: 880px; width: 340px; margin-bottom: 0}
+.u-section-1 .u-tabs-1 {min-height: 880px; width: 340px}
 .u-section-1 .u-tab-pane-1 {height: 660px}
 .u-section-1 .u-image-1 {height: 277px; margin-top: 0; margin-right: initial; margin-left: initial; width: auto}
 .u-section-1 .u-text-1 {font-size: 0.75rem; margin-top: 40px; margin-left: 0; width: auto}
