--- a/Experiences.css
+++ b/Experiences.css
@@ -1,6 +1,6 @@
 .u-section-1 .u-sheet-1 {min-height: 1384px}
 .u-section-1 .u-image-1 {width: 853px; height: 589px; margin: 70px auto 0}
-.u-section-1 .u-group-1 {min-height: 795px; width: 651px; background-image: none; height: auto; margin: -80px auto 10px}
+.u-section-1 .u-group-1 {min-height: 795px; width: 651px; background-image: none; margin: -80px auto 10px}
 .u-section-1 .u-container-layout-1 {padding: 50px 50px 0}
 .u-section-1 .u-text-1 {font-family: "Changa One"; font-size: 3.4375rem; text-decoration: underline !important; margin: -13px -11px 0 0}
 .u-section-1 .u-text-2 {font-style: italic; font-size: 1.5rem; font-weight: 700; margin: 17px 0 0}
