--- a/Kelvin-Profile-Information.css
+++ b/Kelvin-Profile-Information.css
@@ -1,3 +1,4 @@
+.u-section-1 {background-image: none}
 .u-section-1 .u-sheet-1 {min-height: 700px}
 .u-section-1 .u-tabs-1 {min-height: 620px; width: 1234px; margin: 60px auto 60px -37px}
 .u-section-1 .u-tab-link-1 {font-size: 0.75rem; background-image: none; letter-spacing: 2px; text-transform: uppercase; font-weight: 700; padding: 10px 25px}
