--- a/Kelvin-Certification.css
+++ b/Kelvin-Certification.css
@@ -25,11 +25,11 @@
 .u-section-2 .u-text-4 {font-size: 1.875rem; font-weight: 700; margin: 30px 10px 0}
 .u-section-2 .u-layout-cell-2 {min-height: 177px}
 .u-section-2 .u-container-layout-2 {padding: 20px}
-.u-section-2 .u-icon-2 {height: 64px; width: 64px; margin: 0 auto}
+.u-section-2 .u-icon-2 {height: 64px; width: 64px; background-image: none; margin: 0 auto}
 .u-section-2 .u-text-5 {font-size: 1.875rem; font-weight: 700; margin: 30px 20px 0}
 .u-section-2 .u-layout-cell-3 {min-height: 177px}
 .u-section-2 .u-container-layout-3 {padding: 20px}
-.u-section-2 .u-icon-3 {height: 64px; width: 64px; margin: 0 auto}
+.u-section-2 .u-icon-3 {height: 64px; width: 64px; background-image: none; margin: 0 auto}
 .u-section-2 .u-text-6 {font-size: 1.875rem; font-weight: 700; margin: 30px 20px 0}
 .u-section-2 .u-layout-cell-4 {min-height: 233px}
 .u-section-2 .u-container-layout-4 {padding: 20px}
@@ -41,7 +41,7 @@
 .u-section-2 .u-text-8 {font-size: 1.875rem; font-weight: 700; margin: 30px 10px 0 20px}
 .u-section-2 .u-layout-cell-6 {min-height: 233px}
 .u-section-2 .u-container-layout-6 {padding: 20px}
-.u-section-2 .u-icon-6 {height: 64px; width: 64px; margin: 0 109px 0 auto}
+.u-section-2 .u-icon-6 {height: 64px; width: 64px; background-image: none; margin: 0 109px 0 auto}
 .u-section-2 .u-text-9 {font-size: 1.875rem; font-weight: 700; margin: 30px 18px 0 40px} 
 
 @media (max-width: 1199px){ .u-section-2 .u-sheet-1 {min-height: 835px}
@@ -66,50 +66,56 @@
 
 @media (max-width: 991px){ .u-section-2 .u-sheet-1 {min-height: 640px}
 .u-section-2 .u-layout-wrap-1 {margin-right: initial; margin-left: initial; width: auto}
-.u-section-2 .u-layout-cell-1 {min-height: 353px}
+.u-section-2 .u-layout-cell-1 {min-height: 139px}
 .u-section-2 .u-icon-1 {margin-top: 0}
 .u-section-2 .u-text-4 {margin-top: 30px; margin-left: 13px; margin-right: 13px}
-.u-section-2 .u-layout-cell-2 {min-height: 353px}
+.u-section-2 .u-layout-cell-2 {min-height: 123px}
 .u-section-2 .u-text-5 {margin-left: 13px; margin-right: 13px}
-.u-section-2 .u-layout-cell-3 {min-height: 353px}
+.u-section-2 .u-layout-cell-3 {min-height: 123px}
 .u-section-2 .u-text-6 {margin-left: 13px; margin-right: 13px}
-.u-section-2 .u-layout-cell-4 {min-height: 353px}
+.u-section-2 .u-layout-cell-4 {min-height: 162px}
 .u-section-2 .u-text-7 {margin-left: 13px; margin-right: 13px}
-.u-section-2 .u-layout-cell-5 {min-height: 100px}
-.u-section-2 .u-layout-cell-6 {min-height: 100px}
+.u-section-2 .u-layout-cell-5 {min-height: 123px}
+.u-section-2 .u-layout-cell-6 {min-height: 162px}
 .u-section-2 .u-text-9 {width: 200px; margin-left: 0; margin-right: 0} }
 
 @media (max-width: 767px){ .u-section-2 .u-sheet-1 {min-height: 100px}
 .u-section-2 .u-text-1 {width: 540px}
 .u-section-2 .u-text-2 {width: 540px}
 .u-section-2 .u-text-3 {width: 540px}
-.u-section-2 .u-layout-cell-1 {min-height: 246px}
+.u-section-2 .u-layout-cell-1 {min-height: 313px}
 .u-section-2 .u-container-layout-1 {padding-left: 10px; padding-right: 10px}
 .u-section-2 .u-icon-1 {margin-top: -33px}
 .u-section-2 .u-text-4 {margin-top: 63px; margin-left: 9px; margin-right: 9px}
-.u-section-2 .u-layout-cell-2 {min-height: 100px}
+.u-section-2 .u-layout-cell-2 {min-height: 277px}
 .u-section-2 .u-container-layout-2 {padding-left: 10px; padding-right: 10px}
 .u-section-2 .u-text-5 {margin-left: 9px; margin-right: 9px}
-.u-section-2 .u-layout-cell-3 {min-height: 100px}
+.u-section-2 .u-layout-cell-3 {min-height: 277px}
 .u-section-2 .u-container-layout-3 {padding-left: 10px; padding-right: 10px}
 .u-section-2 .u-text-6 {margin-left: 9px; margin-right: 9px}
-.u-section-2 .u-layout-cell-4 {min-height: 100px}
+.u-section-2 .u-layout-cell-4 {min-height: 365px}
 .u-section-2 .u-container-layout-4 {padding-left: 10px; padding-right: 10px}
 .u-section-2 .u-text-7 {margin-left: 9px; margin-right: 9px}
+.u-section-2 .u-layout-cell-5 {min-height: 277px}
 .u-section-2 .u-container-layout-5 {padding-left: 10px; padding-right: 10px}
+.u-section-2 .u-layout-cell-6 {min-height: 365px}
 .u-section-2 .u-container-layout-6 {padding-left: 10px; padding-right: 10px} }
 
 @media (max-width: 575px){ .u-section-2 .u-text-1 {width: 340px}
 .u-section-2 .u-text-2 {width: 340px}
 .u-section-2 .u-text-3 {width: 340px}
-.u-section-2 .u-layout-cell-1 {min-height: 271px}
+.u-section-2 .u-layout-cell-1 {min-height: 197px}
 .u-section-2 .u-icon-1 {margin-top: 0}
 .u-section-2 .u-text-4 {margin-top: 30px; margin-left: 6px; margin-right: 6px}
+.u-section-2 .u-layout-cell-2 {min-height: 174px}
 .u-section-2 .u-text-5 {margin-left: 6px; margin-right: 6px}
+.u-section-2 .u-layout-cell-3 {min-height: 174px}
 .u-section-2 .u-text-6 {margin-left: 6px; margin-right: 6px}
+.u-section-2 .u-layout-cell-4 {min-height: 230px}
 .u-section-2 .u-text-7 {margin-left: 6px; margin-right: 6px}
+.u-section-2 .u-layout-cell-5 {min-height: 174px}
 .u-section-2 .u-text-8 {font-size: 1.5rem}
-.u-section-2 .u-layout-cell-6 {min-height: 161px}
+.u-section-2 .u-layout-cell-6 {min-height: 230px}
 .u-section-2 .u-icon-6 {margin-right: auto}
 .u-section-2 .u-text-9 {font-size: 1.5rem; margin-top: 24px; margin-left: auto; margin-right: auto} }.u-section-3 {background-image: none}
 .u-section-3 .u-sheet-1 {min-height: 631px}
@@ -131,24 +137,24 @@
 .u-section-3 .u-text-2 {width: auto; margin: -150px 60px 0 0} }
 
 @media (max-width: 991px){ .u-section-3 .u-sheet-1 {min-height: 542px}
-.u-section-3 .u-layout-cell-1 {min-height: 100px}
+.u-section-3 .u-layout-cell-1 {min-height: 388px}
 .u-section-3 .u-image-1 {width: 263px; margin-top: 198px; margin-right: 1px}
-.u-section-3 .u-layout-cell-2 {min-height: 100px}
+.u-section-3 .u-layout-cell-2 {min-height: 388px}
 .u-section-3 .u-text-2 {margin-top: -145px; margin-left: -124px} }
 
 @media (max-width: 767px){ .u-section-3 .u-sheet-1 {min-height: 936px}
-.u-section-3 .u-layout-cell-1 {min-height: 266px}
+.u-section-3 .u-layout-cell-1 {min-height: 582px}
 .u-section-3 .u-container-layout-1 {padding-left: 10px; padding-right: 10px}
 .u-section-3 .u-text-1 {margin-right: 0}
 .u-section-3 .u-image-1 {margin-top: 38px}
-.u-section-3 .u-layout-cell-2 {min-height: 528px}
+.u-section-3 .u-layout-cell-2 {min-height: 582px}
 .u-section-3 .u-container-layout-2 {padding-left: 10px}
 .u-section-3 .u-text-2 {margin-left: 0} }
 
 @media (max-width: 575px){ .u-section-3 .u-sheet-1 {min-height: 918px}
-.u-section-3 .u-layout-cell-1 {min-height: 100px}
+.u-section-3 .u-layout-cell-1 {min-height: 366px}
 .u-section-3 .u-text-1 {font-size: 2.25rem}
-.u-section-3 .u-layout-cell-2 {min-height: 100px}
+.u-section-3 .u-layout-cell-2 {min-height: 366px}
 .u-section-3 .u-text-2 {margin-right: 10px} }.u-section-4 .u-sheet-1 {min-height: 1361px}
 .u-section-4 .u-text-1 {font-weight: 700; font-size: 2.25rem; margin: 46px auto 0 30px}
 .u-section-4 .u-text-2 {font-weight: 700; animation-duration: 1000ms; margin: 84px 897px 0 auto}
@@ -250,37 +256,38 @@
 .u-section-4 .u-text-21 {margin-right: auto; margin-left: 57px}
 .u-section-4 .u-icon-10 {margin-bottom: 7px} }
 
-@media (max-width: 575px){ .u-section-4 .u-sheet-1 {min-height: 2914px}
+@media (max-width: 575px){ .u-section-4 .u-sheet-1 {min-height: 2291px}
 .u-section-4 .u-text-1 {font-size: 1.5rem; margin-top: 55px; margin-left: 9px}
 .u-section-4 .u-text-2 {margin-top: 20px; margin-right: auto; margin-left: 9px}
+.u-section-4 .u-icon-1 {margin-right: 177px; margin-left: auto}
 .u-section-4 .u-text-3 {width: auto; margin-top: 20px; margin-right: 0; margin-left: 8px}
 .u-section-4 .u-text-4 {margin-right: 268px}
-.u-section-4 .u-text-5 {width: auto; margin-top: 20px; margin-right: 14px}
-.u-section-4 .u-icon-2 {margin-top: 20px; margin-right: 268px; margin-left: auto}
-.u-section-4 .u-text-6 {margin-right: 268px}
-.u-section-4 .u-text-7 {margin-left: 114px}
-.u-section-4 .u-icon-3 {margin-top: 20px; margin-left: 114px}
-.u-section-4 .u-text-8 {width: auto; margin-right: 0; margin-left: 23px}
-.u-section-4 .u-icon-4 {margin-top: 20px; margin-left: 114px}
-.u-section-4 .u-text-9 {margin-top: 20px; margin-right: auto; margin-left: 114px}
-.u-section-4 .u-text-10 {width: auto; margin-right: 0; margin-left: 23px}
-.u-section-4 .u-icon-5 {margin-top: 20px; margin-left: 114px}
-.u-section-4 .u-text-11 {margin-top: 20px; margin-right: auto; margin-left: 114px}
-.u-section-4 .u-text-12 {width: auto; margin-right: 0; margin-left: 23px}
-.u-section-4 .u-icon-6 {margin-left: 276px}
-.u-section-4 .u-text-13 {margin-top: 20px; margin-right: auto; margin-left: 276px}
-.u-section-4 .u-text-14 {width: auto; margin-right: 0; margin-left: 23px}
-.u-section-4 .u-icon-7 {margin-top: 20px; margin-left: 114px}
-.u-section-4 .u-text-15 {margin-top: 20px; margin-right: auto; margin-left: 114px}
-.u-section-4 .u-text-16 {width: auto; margin-right: 0; margin-left: 23px}
-.u-section-4 .u-icon-8 {margin-top: 20px; margin-left: 114px}
-.u-section-4 .u-text-17 {margin-top: 20px; margin-right: auto; margin-left: 114px}
-.u-section-4 .u-text-18 {width: auto; margin-right: 0; margin-left: 23px}
-.u-section-4 .u-icon-9 {margin-top: 20px; margin-left: 114px}
-.u-section-4 .u-text-19 {margin-top: 20px; margin-right: auto; margin-left: 114px}
-.u-section-4 .u-text-20 {width: auto; margin-right: 0; margin-left: 23px}
-.u-section-4 .u-text-21 {margin-top: 20px; margin-left: 114px}
-.u-section-4 .u-icon-10 {margin-bottom: 15px; margin-left: 276px} }.u-section-5 .u-sheet-1 {min-height: 821px}
+.u-section-4 .u-text-5 {margin-top: 20px}
+.u-section-4 .u-icon-2 {margin-top: -118px; margin-left: 92px}
+.u-section-4 .u-text-6 {width: auto; margin-top: 79px; margin-right: auto; margin-left: 17px}
+.u-section-4 .u-text-7 {width: auto; margin-top: 23px; margin-right: 0; margin-left: 8px}
+.u-section-4 .u-icon-3 {margin-top: -172px; margin-left: 92px}
+.u-section-4 .u-text-8 {width: auto; margin-top: 184px; margin-right: 1px; margin-left: 9px}
+.u-section-4 .u-icon-4 {margin-top: -128px; margin-right: 177px; margin-left: auto}
+.u-section-4 .u-text-9 {width: auto; margin-top: -46px; margin-right: auto; margin-left: 17px}
+.u-section-4 .u-text-10 {width: auto; margin-top: 175px; margin-right: 1px; margin-left: 5px}
+.u-section-4 .u-icon-5 {margin-top: -204px; margin-right: 182px; margin-left: auto}
+.u-section-4 .u-text-11 {width: auto; margin-top: -46px; margin-right: auto; margin-left: 9px}
+.u-section-4 .u-text-12 {width: auto; margin-top: 249px; margin-right: 1px; margin-left: 9px}
+.u-section-4 .u-icon-6 {margin-top: -194px; margin-right: 177px; margin-left: auto}
+.u-section-4 .u-text-13 {width: auto; margin-top: -46px; margin-right: auto; margin-left: 14px}
+.u-section-4 .u-text-14 {width: auto; margin-top: 238px; margin-right: 180px; margin-left: 14px}
+.u-section-4 .u-icon-7 {margin-top: -118px; margin-left: 114px}
+.u-section-4 .u-text-15 {width: auto; margin-top: -57px; margin-right: auto; margin-left: 27px}
+.u-section-4 .u-text-16 {width: auto; margin-top: 189px; margin-right: 14px; margin-left: 9px}
+.u-section-4 .u-icon-8 {margin-top: -280px; margin-left: 114px}
+.u-section-4 .u-text-17 {width: auto; margin-top: -46px; margin-right: auto; margin-left: 27px}
+.u-section-4 .u-text-18 {width: auto; margin-top: 340px; margin-right: 1px; margin-left: 5px}
+.u-section-4 .u-icon-9 {margin-top: -224px; margin-left: 114px}
+.u-section-4 .u-text-19 {width: auto; margin-top: -43px; margin-right: auto; margin-left: 27px}
+.u-section-4 .u-text-20 {width: auto; margin-top: 279px; margin-right: 6px; margin-left: 14px}
+.u-section-4 .u-text-21 {width: auto; margin-top: -161px; margin-left: 27px}
+.u-section-4 .u-icon-10 {margin: -43px 132px -563px auto} }.u-section-5 .u-sheet-1 {min-height: 821px}
 .u-section-5 .u-text-1 {font-weight: 700; font-size: 2.25rem; margin: 20px -54px 0 0}
 .u-section-5 .u-table-1 {margin: 9px auto 60px 0}
 .u-block-f8b5-42 {border-style: solid}
@@ -288,7 +295,7 @@
 .u-block-f8b5-59 {font-weight: 700; background-image: none}
 .u-block-f8b5-60 {font-weight: 700; background-image: none}
 .u-block-f8b5-61 {font-weight: 700; background-image: none}
-.u-section-5 .u-table-body-1 {font-weight: 600}
+.u-section-5 .u-table-body-1 {font-weight: 600; font-size: 1rem; line-height: 26px; letter-spacing: normal}
 .u-section-5 .u-table-cell-1 {background-image: none; text-transform: uppercase; font-weight: 700}
 .u-section-5 .u-table-cell-2 {background-image: none; font-weight: 700; text-transform: uppercase}
 .u-section-5 .u-table-cell-3 {background-image: none; text-transform: uppercase; font-weight: 700}
@@ -568,8 +575,7 @@
 .u-block-f8b5-35 {background-image: none} 
 
 @media (max-width: 1199px){ .u-section-5 .u-text-1 {margin-right: 0}
-.u-section-5 .u-table-1 {margin-right: initial; margin-left: initial}
-.u-section-5 .u-table-body-1 {font-size: 1rem; line-height: 26px; letter-spacing: normal} }
+.u-section-5 .u-table-1 {margin-right: initial; margin-left: initial} }
 
 @media (max-width: 575px){ .u-section-5 .u-sheet-1 {min-height: 4498px}
 .u-section-5 .u-text-1 {font-size: 1.875rem; margin-top: 10px}
@@ -602,26 +608,30 @@
 @media (max-width: 991px){ .u-section-6 {min-height: 532px}
 .u-section-6 .u-shape-1 {width: 293px; height: 293px; margin-top: 13px; margin-left: calc(((100% - 1140px) / 2) + 118px)}
 .u-section-6 .u-layout-wrap-1 {width: 720px; margin-top: -305px; margin-left: calc(((100% - 1140px) / 2) + 210px)}
-.u-section-6 .u-layout-cell-1 {min-height: 100px}
+.u-section-6 .u-layout-cell-1 {min-height: 397px}
 .u-section-6 .u-container-layout-1 {padding: 60px 20px}
 .u-section-6 .u-text-1 {font-size: 4.0625rem}
-.u-section-6 .u-layout-cell-2 {min-height: 100px}
+.u-section-6 .u-layout-cell-2 {min-height: 397px}
 .u-section-6 .u-image-1 {height: 231px; margin-right: initial; margin-left: initial}
 .u-section-6 .u-text-3 {margin-left: 31px} }
 
 @media (max-width: 767px){ .u-section-6 {min-height: 1016px}
 .u-section-6 .u-shape-1 {width: 291px; height: 291px; margin-left: calc(((100% - 1140px) / 2) + 184px)}
 .u-section-6 .u-layout-wrap-1 {width: 540px; margin-top: -303px; margin-left: calc(((100% - 1140px) / 2) + 300px)}
+.u-section-6 .u-layout-cell-1 {min-height: 687px}
 .u-section-6 .u-container-layout-1 {padding-right: 130px; padding-left: 10px}
 .u-section-6 .u-text-1 {font-size: 6rem}
-.u-section-6 .u-layout-cell-2 {background-position: 13.1% 50%}
+.u-section-6 .u-layout-cell-2 {min-height: 525px; background-position: 13.1% 50%}
 .u-section-6 .u-image-1 {height: 306px; margin-top: -561px; margin-right: initial; margin-left: initial}
 .u-section-6 .u-text-3 {margin-left: 41px} }
 
-@media (max-width: 575px){ .u-section-6 {min-height: 755px}
+@media (max-width: 575px){ .u-section-6 {min-height: 1442px}
 .u-section-6 .u-shape-1 {width: 228px; height: 228px; margin-left: calc(((100% - 1140px) / 2) + 308px)}
-.u-section-6 .u-layout-wrap-1 {width: 340px; margin-top: -240px; margin-left: calc(((100% - 1140px) / 2) + 400px)}
+.u-section-6 .u-layout-wrap-1 {width: 340px; margin-top: -241px; margin-left: auto; margin-bottom: 60px}
+.u-section-6 .u-layout-cell-1 {min-height: 821px}
 .u-section-6 .u-container-layout-1 {padding-top: 30px; padding-right: 65px; padding-bottom: 9px}
-.u-section-6 .u-text-1 {font-size: 4.5rem; width: auto; margin-right: -65px}
+.u-section-6 .u-text-1 {font-size: 4.5rem; width: auto; margin-top: 0; margin-right: -60px; margin-left: -5px}
+.u-section-6 .u-text-2 {margin-top: 209px; margin-bottom: -166px}
+.u-section-6 .u-layout-cell-2 {min-height: 331px}
 .u-section-6 .u-image-1 {height: 193px; margin-bottom: 0; margin-right: initial; margin-left: initial}
-.u-section-6 .u-text-3 {width: auto; margin-top: 60px; margin-right: 13px; margin-left: 26px} }
+.u-section-6 .u-text-3 {width: auto; margin: 511px 29px -283px 10px} }
