--- a/nicepage.css
+++ b/nicepage.css
@@ -29915,11 +29915,14 @@ a.u-link.u-text-hover-grey-90:hover {
     /** common-rules **/
     h1.u-title
     {
-        font-weight: 400;
-        font-size: 4.5rem;
+        font-size: 3.75rem;
         line-height: 1.1;
         margin-top: 20px;
         margin-bottom: 20px;
+        font-weight: 600;
+        list-icon-spacing: 0.3;
+        list-icon-size: 0.8;
+        font-family: Source Sans Pro, sans-serif;
     }
     h2.u-subtitle
     {
@@ -30194,32 +30197,31 @@ a.u-link.u-text-hover-grey-90:hover {
 
 /*end-variables sitestylecss*/
  .u-header {background-image: none}
-.u-header .u-sheet-1 {min-height: 148px}
-.u-header .u-menu-1 {margin: 23px auto 0 937px}
+.u-header .u-sheet-1 {min-height: 170px}
+.u-header .u-menu-1 {margin: 26px auto 0 937px}
 .u-header .u-nav-1 {font-size: 1rem}
-.u-header .u-nav-2 {font-size: 1rem; font-weight: normal}
-.u-header .u-text-1 {text-shadow: 0 2px 8px rgba(128,128,128,1); font-size: 3rem; animation-duration: 1000ms; margin: -58px 781px 0 20px}
+.u-header .u-nav-2 {font-size: 1.125rem; font-weight: 600; text-shadow: 2px 2px 8px rgba(0,0,0,0.4)}
+.u-header .u-text-1 {text-shadow: 0 2px 8px rgba(128,128,128,1); animation-duration: 1000ms; margin: -58px 728px 0 0}
 .u-header .u-social-icons-1 {white-space: nowrap; height: 52px; min-height: 16px; width: 197px; min-width: 88px; animation-duration: 1000ms; margin: 0 auto 0 19px}
-.u-header .u-icon-1 {height: 100%}
-.u-header .u-icon-2 {height: 100%}
-.u-header .u-icon-3 {height: 100%}
-.u-header .u-search-1 {width: 166px; min-height: 38px; margin: -38px auto 23px 937px}
+.u-header .u-icon-1 {height: 53px}
+.u-header .u-icon-2 {height: 53px}
+.u-header .u-icon-3 {height: 53px}
+.u-header .u-search-1 {width: 166px; min-height: 38px; margin: -38px auto 26px 937px}
 .u-header .u-search-icon-1 {background-image: none; box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4)} 
 @media (max-width: 1199px){ .u-header .u-sheet-1 {min-height: 170px}
 .u-header .u-menu-1 {width: auto; margin-left: 726px}
-.u-header .u-text-1 {width: auto; margin-top: -58px; margin-right: 601px; margin-left: 0}
-.u-header .u-social-icons-1 {height: 41px; width: 163px; margin-right: 729px; margin-left: auto}
+.u-header .u-text-1 {width: auto; font-size: 3.75rem; margin-top: -58px; margin-right: 528px; font-weight: 600}
+.u-header .u-social-icons-1 {height: 41px; width: 163px; margin-top: 0; margin-right: 729px; margin-left: auto}
 .u-header .u-search-1 {height: auto; margin-top: -38px; margin-left: 726px} }
 @media (max-width: 991px){ .u-header .u-menu-1 {margin-left: 506px}
-.u-header .u-text-1 {margin-right: 381px}
+.u-header .u-text-1 {margin-right: 308px}
 .u-header .u-social-icons-1 {width: 91px; margin-right: 42px}
 .u-header .u-search-1 {width: 166px; margin-right: 8px; margin-left: 554px} }
 @media (max-width: 767px){ .u-header .u-menu-1 {margin-left: 326px}
-.u-header .u-text-1 {margin-right: 201px}
+.u-header .u-text-1 {margin-right: 128px}
 .u-header .u-social-icons-1 {margin-right: 38px}
 .u-header .u-search-1 {margin-left: 374px} }
-@media (max-width: 575px){ .u-header .u-sheet-1 {min-height: 148px}
-.u-header .u-menu-1 {margin-left: 0}
+@media (max-width: 575px){ .u-header .u-menu-1 {margin-left: 0}
 .u-header .u-nav-2 {font-weight: 700}
 .u-header .u-text-1 {font-size: 1.875rem; margin-top: 20px; margin-right: auto}
 .u-header .u-social-icons-1 {width: 163px; margin-right: auto; margin-left: 0}
